--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,14 @@
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#66339999",
     "titleBar.inactiveForeground": "#e7e7e799"
-  }
+  },
+  "cSpell.words": [
+    "btn",
+    "dyna",
+    "hookform",
+    "MMORPG",
+    "MOBA",
+    "Pageview",
+    "prefferedcolor"
+  ]
 }
