--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.8.1",
@@ -15,6 +16,7 @@
     "@mui/icons-material": "^5.4.4",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.2",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "dayjs": "^1.10.8",
     "material-ui": "^0.20.2",
@@ -22,10 +24,13 @@
     "mui-icons": "^1.2.1",
     "next": "12.1.0",
     "nookies": "^2.5.2",
-    "react": "17.0.2",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-axios": "^2.0.5",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
     "react-player": "^2.9.0",
+    "react-query": "^3.34.16",
     "react-simple-video-player": "^1.0.0",
     "reactjs-media": "^2.2.0",
     "reflexbox": "^4.0.6",
@@ -34,10 +39,14 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
+    "@types/reflexbox": "^4.0.4",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "jest": "^27.5.1",
     "typescript": "4.5.5"
   }
 }
