--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.4.4",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.2",
